# UBL-Office-Messenger

./: .gitignore  ARCHITECTURE.md  CHANGELOG_UBL_FIX.md  COMPILATION_COMPLETE.md  COMPILATION_ERRORS.md  COMPILATION_STATUS.md  CONTRIBUTING.md  Claude Review.md  Esta é a **Lista de Ouro (Diamond Checkl.md  Esta é uma análise **forense da arquitet.md  FINAL_COMPILATION_REPORT.md  Gemini Review.md  I have performed a exhaustive audit of t.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Latencia.md  OPENTELEMETRY_API_ISSUE.md  OPENTELEMETRY_FIX_PLAN.md  PERMANENT_FIXES_SUMMARY.md  README.md  THREE_SYSTEMS_OVERVIEW.jsonl  THREE_SYSTEMS_OVERVIEW.md  WIRING_GUIDE.md  ecosystem.config.js  env.example  setup-dev.sh  test-ubl.sh  verify-ubl-fix.sh
UBL-testing suite/: .env.test  01-foundation.  02-golden-paths.sh  06-load.sh  Cargo.toml  Dockerfile  TEST_GUIDE.md  calculate-resilience-score.sh  cascading-failure.yml  ci-integration.sh  docker-compose.chaos.yml  docker-compose.golden.yml  docker-compose.integration.yml  docker-compose.test.yml  high-latency.yml  message-load.js  playwright.config.ts  resource-exhaustion.yml  setup.sh  soak-test.js  spike-test.js  stress-test.js  teardown.sh  vitest.config.ts
UBL-testing suite/.github/workflows/: ubl-kernel-tests.yml
UBL-testing suite/__tests__/components/: ChatView.test.tsx  Sidebar.test.tsx
UBL-testing suite/__tests__/lib/: cn.test.ts
UBL-testing suite/src/: fixtures.rs  helpers.rs  lib.rs
UBL-testing suite/src/clients/: mod.rs  office_client.rs  ubl_client.rs
UBL-testing suite/src/entity/: mod.rs
UBL-testing suite/src/session/: mod.rs
UBL-testing suite/tests/: auth.spec.  baseline_performance.  chaos_monkey.rs  diamond_complete.rs  failure_recovery.rs  health_checks.rs  job-approval.  performance.rs  policy_enforcement.rs  projection_consistency.rs  real-time.spec.ts
UBL-testing suite/tests/common/: mod.rs
UBL-testing suite/tests/integration/: full_flow.rs
UBL-testing suite/ubl-link/tests/: link_validation.rs
UBL-testing suite/ubl-policy-vm/tests/: bytecode.rs
UBL-testing suite/ubl-server/tests/: ledger_integration.rs  webauthn_auth.rs
apps/office/: Cargo.toml  DISCOVERY.md  Dockerfile  FIXES_APPLIED.md  TEST_RESULTS.md
apps/office/src/: asc.rs  http_unix.rs  lib.rs  main.rs  types.rs
apps/office/src/api/: http.rs  mcp.rs  mod.rs  task_routes.rs
apps/office/src/audit/: events.rs
apps/office/src/context/: frame.rs  memory.rs  mod.rs  narrator.rs
apps/office/src/entity/: guardian.rs  instance.rs  repository.rs
apps/office/src/governance/: provenance.rs  sanity_check.rs  simulation.rs
apps/office/src/job_executor/: executor.rs  mod.rs  types.rs
apps/office/src/llm/: anthropic.rs  gemini.rs  mod.rs  openai.rs  provider.rs
apps/office/src/mcp/: builtin.rs  client.rs  config.rs  mod.rs  native.rs  native_server.rs  prompts.rs  protocol.rs  registry.rs  tool_executor.rs  transport.rs  unified_registry.rs
apps/office/src/middleware/: permit.rs
apps/office/src/observability/: metrics.rs  mod.rs  tracing.rs
apps/office/src/routes/: deploy.rs  mod.rs  ws.rs
apps/office/src/session/: handover.rs  mod.rs  session.rs  token_budget.rs
apps/office/src/task/: cards.rs  executor.rs  fsm.rs  mod.rs  types.rs
apps/office/src/tools/: mod.rs
apps/office/src/ubl_client/: identity_events.rs  ledger.rs  mod.rs  trust.rs
office/: Cargo.toml
office/src/: lib.rs  llm.rs  ubl_client.rs
office/src/middleware/: constitution.rs  mod.rs
ubl/kernel/rust/: Cargo.toml  IMPLEMENTATION_STATUS.md
ubl/kernel/rust/.sqlx/: query-05346f2a6f55aea0f0946dfc620323ed2421e42a13e06559432beda09bff3331.json  query-0fe935d974ba246bbc71d346cae70fab9aa0499ca89a0cf658f2240f6dbba127.json  query-119eebfe72281125d277d97b2a87cc2a4cc466a63fbac8768891052f42792501.json  query-1256652c29e679b41f156de7dbf1d093fa1a759f38542c738880d4426ea16e9e.json  query-198f6465524b26e695c67effc5dcf5f08804964d4a44683d8373671a886fd889.json  query-1a2657ea8d9b955b510adf7a39f4ee98a4d018cfd69bcebebcb1b1f58d19dbfb.json  query-1c7ea5743a18610d8233a5feaa92a6bc6043ad4b8ece772b8551538e1a35b822.json  query-1cc1f1b33acf3eb0937c25df5d98fda0f6ad1800abb8603ad5d6d258f4da78be.json  query-2e830e5c1ed7f28c4bb03b94bd64975042ddf46e6ff8738157fc4cae72ab20a5.json  query-2fc0b39c05941b2618798d5d2582f2aa50f065822f25532d6f199b718c9a96f1.json  query-34bc859a621ccbf1034d7c7e325036c60c0c05f14520b7ea8733b8b5a396eb41.json  query-3605e3b1bfa5b21b72db0c2eafc494c9eb920bf34e86733c1e06860b3f1b91bf.json  query-365909895aea40b9c02f56b014eb4c15e1f72ecad3b7c26c824fa7b71b05cdb7.json  query-3cae9c692d81b5f1bbe1e6316050eab5b3224b63ca67383645df8a4f99542023.json  query-40c7e52eec2a4866bd8a6d8743452e4a169461fe07c8b069f150a2c3fa795e07.json  query-424430a475761f0d16082931f1d5f9b2ff788b8899eb611ba5e93ce76dc63ac0.json  query-46b399a541b01b42224aabfba5d63e0c59aca0299b0b8cbe73ad87f487dd3ff1.json  query-470bab9cd0311846a2a81747c37e62938ce49081531503f528aa038c99e6a254.json  query-48d86f5177d372769636ff923a3a41bfd164b75e163a824c0362ec3636890e63.json  query-4cfe98575328a3bcdb2aa9add2e86d0b3cddd07008b016da4d2ecd89569c9dfb.json  query-50640a11adea0808724ba99ff64d84e622ea50428de7f70eb834f08e3dcbc157.json  query-519839bd8143530d5d023ddcbf4808f12483437d73e8d44accd580a52596f980.json  query-58a26f217c3d039ef394cbbfbc6c54c75ff4ad33a75341749c18114e9fba40fe.json  query-5a3df0ff80ea3a176897fcce958f78619bbb107b66d2048aa215821ef4b9e8d0.json  query-6c31422e7f862dfb306f85f11719733545ceecdd5272194cb20a6f6351658e19.json  query-6da0c82ca141d83bc5c7701f76df3c7ab98a91b3fc4abaab0aafd3a60b82bb82.json  query-6dcb5b695dd3eb7e4408df0fffff526ce23dcb94c33c7860a99545f4ceba6deb.json  query-752841e095bfbb3a5224155ca1b6e649c33a359bc406e4e7703738105b4aeab7.json  query-81acebb25e5080576cb11e65fce29e2b435ccbe16554c7c53c72653716588d14.json  query-88dacebcd9a57c504f7d5ed3a041479eca884133aac68ee1baa6620d02e126ad.json  query-8a07fa1031dadd3ea18aa0e4fe96665a4cc5a3b5da965f0558c100e28be7734c.json  query-8ca6680e84d865be164afaeb6d5efd2b08ca3f5ecc5509e02d4d1ceaae44b68e.json  query-98fc7dc37dac86743f5c6232ef5c97b802f633e9999cb4a889bc02a1f8b45ad7.json  (+24 more)
(+727 files in other folders)
