[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP Client
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Testing
anyhow = "1"
thiserror = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

# Time
time = { version = "0.3", features = ["macros", "serde"] }

# WebSocket/SSE
eventsource-client = "0.12"
tokio-tungstenite = "0.21"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
url = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
wiremock = "0.6"
assert_matches = "1.5"