[package]
name = "office"
version = "0.1.0"
edition = "2021"
description = "Office - LLM Operating System for UBL"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex for constitution
regex = "1"
once_cell = "1"

# NO sqlx or database dependencies!
# Office communicates ONLY via UBL Gateway HTTP API

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
# NO database features - this is intentional

