[package]
name = "ubl-atom"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UBL Atom - Canonical JSON serialization (SPEC-UBL-ATOM v1.0)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }
