[package]
name = "ubl-link"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UBL Link - The only interface of tangency (SPEC-UBL-LINK v1.0)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.11"
thiserror = { workspace = true }
