[package]
name = "ubl-membrane"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UBL Membrane - Physics validation layer (SPEC-UBL-MEMBRANE v1.0)"

[dependencies]
ubl-link = { path = "../ubl-link" }
ubl-kernel = { path = "../ubl-kernel" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
ed25519-dalek = "2"
