[package]
name = "ubl-pact"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UBL Pact - Authority, Consensus and Risk (SPEC-UBL-PACT v1.0)"

[dependencies]
ubl-kernel = { path = "../ubl-kernel" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
