[package]
name = "ubl-policy-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UBL Policy VM - TDLN executor (SPEC-UBL-POLICY v1.0)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
