[package]
name = "ubl-runner-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UBL Runner Core - Isolated execution (SPEC-UBL-RUNNER v1.0)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
