[package]
name = "ubl-runner"
version = "0.1.0"
edition = "2021"
authors = ["UBL Team"]
description = "UBL Runner - Pull-only job executor (no HTTP server)"
license = "MIT"

[[bin]]
name = "ubl-runner"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UBL Core
ubl-kernel = { path = "../ubl-kernel" }
ubl-atom = { path = "../ubl-atom" }
ubl-link = { path = "../ubl-link" }

# URL encoding
urlencoding = "2"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }


