[package]
name = "ubl-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UBL Server - HTTP API"

[[bin]]
name = "ubl-server"
path = "src/main.rs"

[[bin]]
name = "verify-ledger"
path = "src/bin/verify-ledger.rs"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["macros", "json", "tokio"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = "0.5"
tower-http = { workspace = true }
futures-util = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto
blake3 = { workspace = true }
hex = { workspace = true }
rand = "0.8"
base64 = "0.22"
base64-url = "3.0"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Database
sqlx = { workspace = true }
time = { workspace = true }

# WebAuthn
webauthn-rs = { workspace = true }
webauthn-rs-proto = { workspace = true }

# OpenSSL vendored (compile from source, no system dependency)
openssl = { version = "0.10", features = ["vendored"] }

# Utilities
uuid = { workspace = true }
url = "2.5"
dotenvy = "0.15"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"
once_cell = "1.19"

# JWT tokens
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
ed25519-dalek = "2"
base64ct = { version = "1", features = ["alloc"] }

# UBL crates
ubl-kernel = { path = "../ubl-kernel" }
ubl-atom = { path = "../ubl-atom" }
ubl-policy-vm = { path = "../ubl-policy-vm" }
